# RAGOps

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_log.md  setup.py
core/: __init__.py  schema.py  serialization.py  tokenizer.py
examples/: EXAMPLE_OUTPUT.md  generate_examples.py  semantic_test_queries.json
indexes/: .gitkeep
indexes/JETEX4D7003B/: active_index.json  registry.json  v1.json
pipeline/: __init__.py
pipeline/embedding/: __init__.py  embedding_engine.py
pipeline/evaluation/: __init__.py  evaluation_engine.py
pipeline/inference/: __init__.py  inference_runner.py
pipeline/ingestion/: ingestion_pipeline.py
pipeline/promotion/: __init__.py  index_registry.py  promoter.py
pipeline/retrieval/: __init__.py  bm25_backend.py  retrieval_engine.py
ragops/: __init__.py  config.py  logging.py
ragops/cli/: __init__.py  __main__.py  main.py
ragops/ingest/: __init__.py  docling_parser.py  pdf_parser.py
ragops/retrieval/: __init__.py  domain_detector.py  hybrid_retrieval.py
scripts/: run_retrieve_and_evaluate.py  sanity_check_retrieval.py  test_hybrid.py
storage/: __init__.py  vector_index_store.py
tests/: __init__.py  generate_fixtures.py  test_hybrid_retrieval.py  test_phase3_ollama.py  test_retrieval_trace.py  test_segment10_regression.py  test_segment2_schema.py  test_segment3_embedding.py  test_segment4_storage.py  test_segment5_promotion.py  test_segment7_evaluation.py  test_segment8_inference.py  test_segment9_cli_e2e.py  test_tokenizer.py
(+10 files in other folders)
