[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragops"
version = "1.3.0"
description = "Deterministic RAG pipeline for enterprise documents. Evaluation-gated retrieval, cited or refused answers."
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.0",
    "Pillow>=9.1.0",
    "pypdf>=3.0.0",
    "ollama>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ragops = "ragops.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ragops*", "core*", "pipeline*", "storage*", "config*"]
